2008-10-14  Tim-Philipp Müller  <tim.muller at collabora co uk>

	* gst/gstquark.c: (_priv_gst_quarks_initialize):
	  Fix printf format warning.

2008-10-14  Sebastian Dröge  <slomo@circular-chaos.org>

	* plugins/elements/gsttee.c: (gst_tee_handle_buffer):
	Fix flow aggregation of tee. Error out immediately for all flow returns
	except OK and NOT_LINKED, return NOT_LINKED if all pads are not linked
	and return OK if at least one pad is linked.

	Before we errored out on "fatal" flow returns (i.e. not for WRONG_STATE)
	and otherwise returned the flow return of the last pad, which is wrong.
	
	* tests/check/elements/tee.c: (_fake_chain), (_fake_chain_error),
	(GST_START_TEST), (tee_suite):
	Add unit tests for the flow aggregation.

2008-10-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/design/part-TODO.txt:
	Remove item from the todo list because it was fixed with the latency
	state change rewrites.

	* docs/design/part-seeking.txt:
	* docs/design/part-segments.txt:
	Update some docs.

	* gst/gstevent.c: (gst_event_new_new_segment_full),
	(gst_event_parse_new_segment_full), (gst_event_new_buffer_size),
	(gst_event_parse_buffer_size), (gst_event_new_qos),
	(gst_event_parse_qos), (gst_event_new_seek),
	(gst_event_parse_seek), (gst_event_new_latency),
	(gst_event_parse_latency):
	Use quarks to construct and parse events.

	* gst/gstquark.c: (_priv_gst_quarks_initialize):
	* gst/gstquark.h:
	Add some more quarks to the table.
	Emit a warning when the quark tables are not in sync.

	* tests/check/gst/gstbus.c: (GST_START_TEST):
	Add an assert.

2008-10-13  Stefan Kost  <ensonic@users.sf.net>

	* plugins/elements/Makefile.am:
	* plugins/indexers/Makefile.am:
	  Don't install static libs for plugins. Fixes #550851 for core.

2008-10-13  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/gstbus.c: (gst_bus_source_finalize),
	(gst_bus_add_watch_full_unlocked), (gst_bus_add_watch_full),
	(gst_bus_enable_sync_message_emission),