@@ -1,3 +1,8 @@
+2008-10-16  Wim Taymans  <wim.taymans@collabora.co.uk>
+
+	* libs/gst/base/gstbasesrc.c: (gst_base_src_class_init):
+	Update some docs.
+
 2008-10-14  Tim-Philipp Müller  <tim.muller at collabora co uk>
 
 	* gst/gstquark.c: (_priv_gst_quarks_initialize):
